fix: changing the spacing of elements from home page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,15 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
-  
+@tailwind components;
+@tailwind utilities;
+
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+
+#root, #__next {
+  height: 100%; /* Para Next.js */
+}
